# Sandstar_Rust

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
HowToUses/: 01_SERVER_BASICS.md  02_REST_API.md  03_WEB_EDITOR.md  04_SOX_PROTOCOL.md  05_ROWS_PROTOCOL.md  06_ROXWARP_CLUSTER.md  07_DEPLOYMENT.md  08_CLI_COMMANDS.md  09_ALERTS.md  10_DASHBOARD.md  11_DRIVER_FRAMEWORK.md  12_DYNAMIC_TAGS.md  13_SEDONA_VM.md  README.md
SedonaRepo/2026-03-11_21-56-18/app/: app.sax  kits.xml
SedonaRepo/2026-03-11_21-56-18/config/: svm.properties
SedonaRepo/2026-03-11_21-56-18/kits/EacIo/: EacIo-6f9da65b-1.2.30.kit
SedonaRepo/2026-03-11_21-56-18/kits/basicSchedule/: basicSchedule-7fdca638-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/control/: control-808b7db3-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/datetime/: datetime-3a280dce-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/datetimeStd/: datetimeStd-fc5628d7-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/driver/: driver-b4cc82ce-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/func/: func-821b7396-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/hvac/: hvac-7264c67c-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/inet/: inet-25648ba7-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/logManager/: logManager-da7714f6-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/logic/: logic-9fe95ce1-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/math/: math-c22b255c-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/kits/platUnix/: platUnix-751711ab-1.2.28.kit
SedonaRepo/2026-03-11_21-56-18/lib/: sedona.properties
SedonaRepo/win32_eacio/: app.sax  kits.xml
crates/sandstar-cli/: Cargo.toml
crates/sandstar-cli/src/: client.rs  main.rs
crates/sandstar-engine/: Cargo.toml
crates/sandstar-engine/src/: channel.rs  components.rs  engine.rs  error.rs  lib.rs  notify.rs  pid.rs  poll.rs  priority.rs  sequencer.rs  table.rs  value.rs  watch.rs
crates/sandstar-hal/: Cargo.toml
crates/sandstar-hal-linux/: Cargo.toml
crates/sandstar-hal-linux/src/: adc.rs  crc.rs  gpio.rs  i2c.rs  lib.rs  pwm.rs  sysfs.rs  uart.rs
crates/sandstar-hal/src/: lib.rs
crates/sandstar-ipc/: Cargo.toml
crates/sandstar-ipc/src/: lib.rs  protocol.rs  types.rs
crates/sandstar-server/: Cargo.toml  build.rs
crates/sandstar-server/deb/: postinst  postrm  prerm
crates/sandstar-server/src/: alerts.rs  args.rs  auth.rs  cmd_handler.rs  config.rs  control.rs  dispatch.rs  history.rs  ipc.rs  lib.rs  loader.rs  logging.rs  main.rs  metrics.rs  pid.rs  reload.rs  sax_converter.rs  sd_notify.rs  signal.rs  tls.rs  watchdog.rs  zinc.rs
crates/sandstar-server/src/drivers/: actor.rs  async_driver.rs  bacnet.rs  loader.rs  local_io.rs  mod.rs  modbus.rs  mqtt.rs  mqtt_e2e_test.rs  poll_scheduler.rs  watch_manager.rs
crates/sandstar-server/src/drivers/bacnet/: discovery.rs  e2e_test.rs  frame.rs  mod.rs  object.rs  transaction.rs  value.rs
crates/sandstar-server/src/rest/: dashboard.html  editor.html  error.rs  filter.rs  handlers.rs  mod.rs  rows.rs  sim.rs  sox_api.rs  tags.rs  trio.rs  types.rs  ws.rs  zinc_format.rs  zinc_grid.rs
crates/sandstar-server/src/roxwarp/: binary_trio.rs  cluster.rs  delta.rs  handler.rs  mdns.rs  mod.rs  mtls.rs  peer.rs  protocol.rs  string_table.rs
crates/sandstar-server/src/sox/: dasp.rs  dyn_slots.rs  mod.rs  name_intern.rs  sox_handlers.rs  sox_protocol.rs
crates/sandstar-server/tests/: dyn_slots_integration.rs  rest_api.rs  roxwarp_integration.rs  soak_test.rs  sox_api_integration.rs  stress_tests.rs  ws_api.rs
crates/sandstar-server/tests/common/: mod.rs
crates/sandstar-svm/: Cargo.toml  build.rs
crates/sandstar-svm/csrc/: errorcodes.h  inet_UdpSocket_std.c  inet_util_std.h  nativetable.c  sedona.h  sedonaPlatform.h  sys_PlatformService_unix.c  vm.c
crates/sandstar-svm/src/: bridge.rs  component_store.rs  ffi.rs  image_loader.rs  lib.rs  native_component.rs  native_datetime.rs  native_eacio.rs  native_file.rs  native_inet.rs  native_mod.rs  native_serial.rs  native_sys.rs  native_table.rs  opcodes.rs  runner.rs  rust_runner.rs  sab_validator.rs  test_utils.rs  types.rs  vm_config.rs  vm_error.rs  vm_interpreter.rs  vm_memory.rs  vm_stack.rs
crates/sandstar-svm/tests/: integration_tests.rs  interpreter_tests.rs  native_method_tests.rs
docs/: BACNET_SETUP.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_PLAN_FILTER_AND_BACNET.md  IMPLEMENTATION_PLAN_MQTT.md  PROGRESS_REPORT.md  PURE_RUST_PLAN.md  ROADMAP_v2.md
docs/Progress/: BACNET_SETUP.md  DEPLOYMENT_CHECKLIST.md  DRIVER_REST_API.md  HARDCODED_LIMITS.md  IMPLEMENTATION_PLAN_DRIVER_FRAMEWORK.md  IMPLEMENTATION_PLAN_FILTER_AND_BACNET.md  IMPLEMENTATION_PLAN_MQTT.md  MQTT_SETUP.md  OVERVIEW.md  PURE_RUST_VM_COMPLETION_PLAN.md  ROADMAP_v2.md
docs/research/: 00_EXECUTIVE_SUMMARY.md  01_ENGINE_CORE_ANALYSIS.md  02_HARDWARE_DRIVERS.md  03_HAYSTACK_TYPE_SYSTEM.md  04_REST_API_AXUM_MIGRATION.md  05_ZINC_IO_ENCODING.md  06_SEDONA_FFI_STRATEGY.md  07_IPC_BRIDGE.md  08_MEMORY_SAFETY_ANALYSIS.md  09_DEPENDENCY_MAPPING.md  10_BUILD_CROSS_COMPILE.md  11_MIGRATION_ROADMAP.md  12_SEDONA_VM_ARCHITECTURE_ANALYSIS.md  13_SEDONA_VM_RUST_PORTING_STRATEGY.md  14_SEDONA_VM_SCALABILITY_LIMITS.md  15_SOX_WEBSOCKET_MIGRATION.md  16_ROXWARP_PROTOCOL.md  17_SEDONA_NAME_LENGTH_ANALYSIS.md  18_SEDONA_DRIVER_FRAMEWORK_V2.md  19_DYNAMIC_SLOTS.md  PROGRESS_REPORT_2026_04_10.md  STATUS_REPORT_2026_04_09.md
etc/: initialize.sh  sandstar-engine.service  sandstar-rust-validate.service
etc/logrotate.d/: sandstar
examples/: alerts.json  control.toml  control_sim.toml  control_virtual_test.toml  database_virtual_test.zinc  scenario_cooling.json  scenario_morning_warmup.json
tools/: bacnet_sim.py  basemulator-bridge.py  basemulator-mapping.json  build-rust.sh  build-sedona-sox.sh  cutover-to-rust.sh  deploy-baha.sh  deploy-todd.sh  health-monitor.sh  installSandstarRust.sh  restart.sh  rollback-to-c.sh  sim.sh  soak-monitor.sh  start.sh  stop.sh  validate-engines.sh  validation-runbook.md  ws_latency_test.py
(+89 files in other folders)
