[package]
name = "sandstar-hal-linux"
version.workspace = true
edition.workspace = true

[dependencies]
sandstar-hal = { path = "../sandstar-hal" }
thiserror.workspace = true
tracing.workspace = true
nix = { version = "0.29", features = ["ioctl", "fs", "term", "poll"] }
libc = "0.2"

[features]
integration-tests = []

[dev-dependencies]
tempfile = "3"
