[package]
name = "sandstar-svm"
version.workspace = true
edition.workspace = true
build = "build.rs"
description = "Sedona Virtual Machine FFI bridge for Sandstar engine"

[dependencies]
sandstar-engine = { path = "../sandstar-engine" }
sandstar-hal = { path = "../sandstar-hal" }
tracing = { workspace = true }

[build-dependencies]
cc = "1"

[features]
default = []
