[package]
name = "sandstar-svm"
version.workspace = true
edition.workspace = true
description = "Sedona Virtual Machine for Sandstar engine (pure Rust)"

[dependencies]
sandstar-engine = { path = "../sandstar-engine" }
sandstar-hal = { path = "../sandstar-hal" }
tracing = { workspace = true }
chrono = "0.4"
smallvec = { workspace = true }

[features]
default = []
